<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/top_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueLight"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/mushroomImage1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.66"
            android:gravity="center"
            android:text="@string/mushroom_expert"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mushroomImage2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="0.33"
            app:srcCompat="@drawable/mushroom_expert"
            android:padding="5dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mushroom_expert_popup_message"
        android:textAlignment="textStart"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorTextGrayDark"
        android:textSize="14sp"
        android:textStyle="bold"

        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/inputExpertID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/id_placeholder"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/wrongIDMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorRedDark"
        android:textSize="14sp"
        android:textStyle="bold"
        />


    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

    <Button
        android:id="@+id/nopeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorRedLight"
        android:layout_marginRight="30dp"
        android:text="@string/nope"/>

    <Button
        android:id="@+id/expertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlueDark"
        android:text="@string/yes_i_am"
        android:layout_marginLeft="30dp"/>
    </LinearLayout>


</LinearLayout>