<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnTicket">

    <FrameLayout
        android:id="@+id/frameFinalSpotLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/picBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroomAddress" />

    <TextView
        android:id="@+id/creatorNameTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="creatorNameTicket"
        android:textAlignment="textStart"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:textColor="#464654"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateCreatedTicket" />

    <TextView
        android:id="@+id/dateCreatedTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:text="dateCreatedTicket"
        android:textAlignment="textStart"
        android:textColor="#464654"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mushroomNameTicket" />

    <TextView
        android:id="@+id/mushroomNameTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="mushroomNameTicket"
        android:textAlignment="center"
        android:textColor="#464654"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mushroomAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:text="@string/mushroom_spot"
        android:textAlignment="textStart"
        android:textColor="#464654"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creatorNameTicket" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorBlueDark"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteTicketBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteTicketBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorRedLight"
        android:text="@string/delete_ticket"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/picBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/backBtn">

        <ImageView
            android:id="@+id/mushroomImage1"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ticket_upload_placeholder" />

        <ImageView
            android:id="@+id/mushroomImage2"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ticket_upload_placeholder" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>